@@ -6,6 +6,9 @@
 - CHG: Fall back to cached log data if forced refresh fails in log view
        and the user chooses to go off-line again. (Stefan Fuhrmann)
 - CHG: Finalize toolbar button icons. (Stefan Fuhrmann)
+- CHG: The changelists are now sorted so that first the user changelists are
+       shown, then the items not in a changelist and the ignore-on-commit
+       changelist last. (Stefan)
 
 Version 1.5.0-beta1
 - NEW: Implemented 'merge reintegrate': new page in the merge wizard. (Stefan)
